# qsoe-os-rust-handover

./: .clang-tidy  .coderabbit.yaml  .gitattributes  .gitignore  Makefile  README.md  ROADMAP.md  component.list  proj_obtain.sh
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  lq-ref-evidence.yml  pages.yml
boot/: Makefile  boot-lq.txt  boot-nq.txt  gptextract.py
common/: cpio.c
docs/roadmap/: app.js  index.html  roadmap.json  styles.css
docs/rust-migration/: BINDINGS.md  DECISIONS.md  DEVLOG.md  ELF_BASELINE.md  HANDOVER.md  HOST_QRVFS_RETIREMENT.md  HOST_TOOLS.md  INDEXING.md  INVENTORY.md  KERNEL_ARTIFACT_AUDIT.md  KERNEL_CANDIDATES.md  MKFS_QRV_RC.md  PIPE.md  PIPE_RC.md  PIPE_RETIREMENT.md  PLAN.md  README.md  RELEASE_NOTE_TEMPLATE.md  RETIREMENT.md  SERVICE_RANKING.md  SLOGGER.md  SLOGGER_BOOT_COMPARE.md  SLOGGER_RC.md  SLOGGER_RETIREMENT.md  SPAWN_CAP_LOADER_BOUNDARY_REVIEW.md  SPEC.md  STATUS.md  TASKS.md  TASK_MANAGER.md  TASK_MANAGER_CPIO.md  TASK_MANAGER_CPIO_RC.md  TASK_MANAGER_CRED.md  TASK_MANAGER_CRED_RC.md  TASK_MANAGER_CRED_RETIREMENT.md  TASK_MANAGER_ELF.md  TASK_MANAGER_FDT.md  TASK_MANAGER_FDT_RC.md  TASK_MANAGER_PATHMGR.md  TASK_MANAGER_PATHMGR_RC.md  TASK_MANAGER_PATHMGR_RETIREMENT.md  (+32 more)
libtaskman/: Makefile
libtaskman/include/: tm_cred.h  tm_log.h  tm_pathmgr.h  tm_procfs.h  tm_seams.h  tm_syscfg.h  tm_sysfs.h
libtaskman/src/: cred.c  log.c  pathmgr.c  reloc.c  tm_procfs.c  tm_sysfs.c
patches/components/: lq-makefile-force-target.patch  lq-makefile-rust-pipe-retired.patch  lq-makefile-rust-slogger-retired.patch  lq-makefile-rust-tm-cpio-rc-default.patch  lq-makefile-rust-tm-cred-rc-default.patch  lq-makefile-rust-tm-cred-retired.patch  lq-makefile-rust-tm-cred.patch  lq-makefile-rust-tm-elf.patch  lq-makefile-rust-tm-fdt-rc-default.patch  lq-makefile-rust-tm-fdt.patch  lq-makefile-rust-tm-pathmgr-retired.patch  lq-makefile-rust-tm-pathmgr.patch  lq-makefile-rust-tm-procfs-retired.patch  lq-makefile-rust-tm-procfs.patch  lq-makefile-rust-tm-provider-exclusive.patch  lq-makefile-rust-tm-pseudodev-retired.patch  lq-makefile-rust-tm-rsrcdb-rc-default.patch  lq-makefile-rust-tm-rsrcdb-retired.patch  lq-makefile-rust-tm-rsrcdb.patch  lq-makefile-rust-tm-script-retired.patch  lq-makefile-rust-tm-script.patch  lq-makefile-rust-tm-shared-providers.patch  lq-makefile-rust-tm-syscfg-rc-default.patch  (+62 more)
rust/: Cargo.toml  README.md
rust/bins/devb-virtio-rs/: Cargo.toml
rust/bins/devb-virtio-rs/src/: lib.rs
rust/bins/minimal-rs/: Cargo.toml
rust/bins/minimal-rs/src/: lib.rs
rust/bins/pipe-rs/: Cargo.toml
rust/bins/pipe-rs/src/: lib.rs
rust/bins/service-example-rs/: Cargo.toml  README.md
rust/bins/service-example-rs/src/: lib.rs
rust/bins/slogger-rs/: Cargo.toml
rust/bins/slogger-rs/src/: lib.rs
rust/bins/test-msgpass-rs/: Cargo.toml
rust/bins/test-msgpass-rs/src/: lib.rs
rust/crates/qsoe-abi/src/: lib.rs
rust/crates/qsoe-cpio/: Cargo.toml
rust/crates/qsoe-cpio/src/: lib.rs
rust/crates/qsoe-elf/: Cargo.toml
rust/crates/qsoe-elf/src/: lib.rs
rust/crates/qsoe-ffi/src/: lib.rs
rust/crates/qsoe-pipe/: Cargo.toml
rust/crates/qsoe-pipe/src/: lib.rs
rust/crates/qsoe-qrvfs/src/: lib.rs  writer.rs
rust/crates/qsoe-ressrv/: Cargo.toml
rust/crates/qsoe-ressrv/src/: lib.rs
rust/crates/qsoe-slogger/: Cargo.toml
rust/crates/qsoe-slogger/src/: lib.rs
rust/crates/qsoe-sysview/: Cargo.toml
rust/crates/qsoe-sysview/src/: lib.rs
rust/crates/qsoe-tm-cpio/: Cargo.toml
rust/crates/qsoe-tm-cpio/src/: lib.rs
rust/crates/qsoe-tm-cred/: Cargo.toml
rust/crates/qsoe-tm-cred/src/: lib.rs
rust/crates/qsoe-tm-elf/: Cargo.toml
rust/crates/qsoe-tm-elf/src/: lib.rs
rust/crates/qsoe-tm-fdt/: Cargo.toml
rust/crates/qsoe-tm-fdt/src/: lib.rs
rust/crates/qsoe-tm-pathmgr/: Cargo.toml
rust/crates/qsoe-tm-pathmgr/src/: lib.rs
rust/crates/qsoe-tm-procfs/: Cargo.toml
rust/crates/qsoe-tm-procfs/src/: lib.rs
rust/crates/qsoe-tm-providers/: Cargo.toml
rust/crates/qsoe-tm-providers/src/: lib.rs
rust/crates/qsoe-tm-pseudodev/: Cargo.toml
rust/crates/qsoe-tm-pseudodev/src/: lib.rs
rust/crates/qsoe-tm-reloc/: Cargo.toml
rust/crates/qsoe-tm-reloc/src/: lib.rs
rust/crates/qsoe-tm-rsrcdb/: Cargo.toml
rust/crates/qsoe-tm-rsrcdb/src/: lib.rs
rust/crates/qsoe-tm-script/: Cargo.toml
rust/crates/qsoe-tm-script/src/: lib.rs
rust/crates/qsoe-tm-syscfg/: Cargo.toml
rust/crates/qsoe-tm-syscfg/src/: lib.rs
rust/crates/qsoe-tm-sysfs/: Cargo.toml
rust/crates/qsoe-tm-sysfs/src/: lib.rs
rust/crates/qsoe-tm-sysmap/: Cargo.toml
rust/crates/qsoe-tm-sysmap/src/: lib.rs
rust/crates/qsoe-virtio/: Cargo.toml
rust/crates/qsoe-virtio/src/: lib.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz_targets/: cpio.rs  elf.rs  qrvfs.rs  syscfg.rs  sysmap.rs
scripts/: apply-component-overrides.sh  audit-artifacts.sh  boot-smoke.sh  build-rust-tm-cpio-provider.sh  build-rust-tm-cred-provider.sh  build-rust-tm-elf-provider.sh  build-rust-tm-fdt-provider.sh  build-rust-tm-pathmgr-provider.sh  build-rust-tm-procfs-provider.sh  build-rust-tm-providers.sh  build-rust-tm-pseudodev-provider.sh  build-rust-tm-rsrcdb-provider.sh  build-rust-tm-script-provider.sh  build-rust-tm-syscfg-provider.sh  build-rust-tm-sysfs-provider.sh  build-rust-tm-sysmap-provider.sh  c-index.sh  c-tidy.sh  capture-elf-baseline.sh  check-elf-reloc-fixture.sh  check-qrvfs-fixture.sh  check-qrvfs-rust-fixture.sh  check-qrvfs-rust-writer-fixture.sh  check-qrvfs-rust-writer-production-root.sh  check-tm-cred-model.sh  check-tm-elf-model.sh  check-tm-fdt-model.sh  check-tm-pathmgr-model.sh  check-tm-procfs-model.sh  check-tm-rsrcdb-model.sh  check-tm-script-model.sh  check-tm-syscfg-model.sh  check-tm-sysmap-model.sh  container-toolchain.sh  mkfs-qrv-rc-live-smoke.sh  mkfs-qrv-rs-artifact.sh  pipe-rc-data-smoke.sh  pipe-smoke.sh  procfs-smoke.sh  reloc-c-evidence.sh  (+65 more)
tests/: tm_cred_model_test.c  tm_elf_model_test.c  tm_fdt_model_test.c  tm_pathmgr_model_test.c  tm_procfs_model_test.c  tm_rsrcdb_model_test.c  tm_script_model_test.c  tm_syscfg_model_test.c
(+1 files in other folders)
