[workspace]
resolver = "2"
members = [
    "crates/qsoe-abi",
    "crates/qsoe-cpio",
    "crates/qsoe-elf",
    "crates/qsoe-ffi",
    "crates/qsoe-pipe",
    "crates/qsoe-qrvfs",
    "crates/qsoe-ressrv",
    "crates/qsoe-slogger",
    "crates/qsoe-sysview",
    "crates/qsoe-tm-cred",
    "crates/qsoe-tm-procfs",
    "crates/qsoe-virtio",
    "bins/minimal-rs",
    "bins/service-example-rs",
    "bins/slogger-rs",
    "bins/devb-virtio-rs",
    "bins/test-msgpass-rs",
    "bins/pipe-rs",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
publish = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
strip = false
