[package]
name = "qsoe-minimal-rs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "qsoe_minimal_rs"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
host-tests = []

[dependencies]
qsoe-abi = { path = "../../crates/qsoe-abi", version = "0.0.0" }
qsoe-cpio = { path = "../../crates/qsoe-cpio", version = "0.0.0" }
