[package]
name = "qsoe-slogger-rs"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "qsoe_slogger_rs"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[dependencies]
qsoe-ffi = { path = "../../crates/qsoe-ffi", version = "0.0.0" }
qsoe-ressrv = { path = "../../crates/qsoe-ressrv", version = "0.0.0" }
qsoe-slogger = { path = "../../crates/qsoe-slogger", version = "0.0.0" }
